--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wordpress-export-to-markdown",
-	"version": "2.2.2",
+	"version": "2.2.3",
 	"description": "Converts a WordPress export XML file into Markdown files.",
 	"main": "index.js",
 	"repository": "https://github.com/lonekorean/wordpress-export-to-markdown.git",
@@ -14,7 +14,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Will Boyd <will@codersblock.com> (https://codersblock.com)",
+	"author": "Will Boyd <will@codersblock.com> (https://codersblock.com), Alex Dadukin (https://algoclub.xyz)",
 	"license": "MIT",
 	"engines": {
 		"node": ">= 12.14.0"
@@ -29,7 +29,6 @@
 		"request": "^2.88.2",
 		"request-promise-native": "^1.0.8",
 		"turndown": "^7.0.0",
-		"turndown-plugin-gfm": "^1.0.2",
 		"xml2js": "^0.4.23"
 	},
 	"devDependencies": {
